RESOLVED FIXED236686
Defer TerminationsExceptions while in operationMaterializeObjectInOSR.
https://bugs.webkit.org/show_bug.cgi?id=236686
Summary Defer TerminationsExceptions while in operationMaterializeObjectInOSR.
Mark Lam
Reported 2022-02-15 20:14:27 PST
operationMaterializeObjectInOSR expects to always succeed. It is difficult (and not worth the effort) to make it be able to handle interruptions by the TerminationException. Since operationMaterializeObjectInOSR is guaranteed to finish running in some finite time, it is reasonable to just defer handling a pending TerminationException until the function returns. rdar://81337114
Attachments
proposed patch. (4.62 KB, patch)
2022-02-15 20:21 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2022-02-15 20:21:25 PST
Created attachment 452128 [details] proposed patch.
Mark Lam
Comment 2 2022-02-15 22:13:01 PST
Thanks for the review. Landed in r289877: <http://trac.webkit.org/r289877>.
Note You need to log in before you can comment on or make changes to this bug.